# customer-support-email-agent

./: README.md
backend/: .env.example  pyproject.toml  requirements.txt  test_graph.py
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  state.py
backend/app/api/routes/: agent.py
backend/app/core/: config.py  vectorstore.py
backend/app/db/: database.py
backend/app/models/: schemas.py
backend/data/: emails.db
backend/data/vectors/: index.faiss  index.pkl
backend/scripts/: init_db.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx
frontend/src/pages/: InboxPage.jsx  TestEmailPage.jsx
